I honestly cannot remember what I changed, but I know it was important. I think it was something to do with the note settings and the theme manager. I also added some new notes and deleted an old one. Hopefully, everything works as expected now.